yaml/polybot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apppolyboy-deployment
spec:
  selector:
    matchLabels:
      app: polybot
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
      - name: polybot
        image: dariakalugny/polybot3
